# Handicap-Evaluation-Tool

./: MOBILE_SETUP.md  README.md  pyproject.toml  railway.toml  requirements.txt  run_mobile.sh  show_qr.py  start_iphone.sh
app/: main.py
app/middleware/: __init__.py  cache.py
app/models/: __init__.py  golfer.py  requests.py
app/routes/: golf.py  team.py
app/services/: __init__.py  probability.py  sandbagging.py
app/static/: index.html  offline.html  sw.js
tests/: test_api.py  test_probability.py
